symmantic meaning footer,fix contact button

--- a/00 - Ausgangsbasis/index.html
+++ b/00 - Ausgangsbasis/index.html
@@ -469,8 +469,7 @@
                             C372,98.8,395.8,75,425,75s53.1,23.8,53.1,53.1v220.7h67.8V128.1c0-29.3,23.8-53.1,53.1-53.1S652,98.8,652,128.1v220.7h67.8V128.1
                             C719.8,61.5,665.6,7.3,599,7.3z"/>
                     </g>
-                    </svg>
-                    
+                    </svg>  
                 <p class="contactarea_p">Want to lern more?</p>
                 <p class="contactarea_p">Call us or drop us a message.</p>
                 <h4 class="contactarea_h4">(555) 123-4567</h4>
@@ -490,12 +489,10 @@
         </div>   
     </div>
    </section>
-   <section class="footer">
-
+   <footer class="footer">
     <p class="footer__text">First project by Lars</p><p class="footer__text">&#8226</p>
     <a href="#" class="footer__text">Terms of Use</a><p class="footer__text">&#8226</p>
     <a href="#" class="footer__text">Privarcy Policey</a>
- 
-   </section>
+   </footer>
 </body>
 </html>
